--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,4 @@
 PORT = 8888
 DATABASE_URI = mongodb://localhost:27017/test
+JWT_SECRET = pneumonoultramicroscopicsilicovolcanoconiosis
+JWT_EXPIRE = 30d
