--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT = 8888
 DATABASE_URI = mongodb://localhost:27017/test
 JWT_SECRET = pneumonoultramicroscopicsilicovolcanoconiosis
 JWT_EXPIRE = 30d
+JWT_EXPIRE_COOKIE = 30
