--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_URI = mongodb://localhost:27017/test
 JWT_SECRET = pneumonoultramicroscopicsilicovolcanoconiosis
 JWT_EXPIRE = 30d
 JWT_EXPIRE_COOKIE = 30
+MAX_SIZE_UPLOAD = 1000000
+FILE_UPLOAD_PATH = ./public/uploads
