--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.4",
+    "geo-coder": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mapquest-geocoder": "^1.1.0",
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "node-geocoder": "^3.27.0",
+    "nodemon": "^2.0.4",
+    "slugify": "^1.4.4"
   }
 }
